# ReDOM

./: .gitignore  pyproject.toml
docs/: ReDOM_Phase1_Directive.md  SCHEMA_SPEC.md
docs/adr/: 001-uv-toolchain.md
docs/state/: current.md
redom/: __init__.py  engine.py  schema.py  types.py
redom.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
schemas/: chime_transactions.yaml
scripts/: analyze_row.py  check_dates.py  check_record_dates.py  count_a_rows.py  debug_selector.py  find_amounts.py  find_real_row.py  find_row_identifier.py  sanitize_chime.py  show_row_html.py  show_wide_structure.py  show_yesterday_rows.py  verify_amounts.py
tests/: test_engine.py
tests/fixtures/: chime_real.html  chime_sample.html
