[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "redom"
version = "0.1.0"
description = "Schema-driven DOM reattachment engine"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools]
packages = ["redom"]
